# My-SFML-GUI

./: .gitignore  CMakeLists.txt  My SFML GUI.sln
My SFML GUI/: Attribute.hpp  BinaryFileStream.hpp  BinaryFileStreamSFML.hpp  BinaryFileStreamStd.hpp  Event.hpp  GUI.cpp  My SFML GUI.vcxproj  My SFML GUI.vcxproj.filters  MyGUI.cpp  MyGUI.hpp  RollArray.hpp  SFMLBase.cpp  SFMLBase.hpp  Skippable.hpp  Tag.hpp  VarianTmap.hpp  attr.cpp  base.cpp  main.cpp  mainBase.cpp
include/engine/core/: SFMLBase.hpp
include/engine/data/: Skippable.hpp  Tag.hpp  VarianTmap.hpp
include/engine/event/: Event.hpp
include/engine/gui/: MyGUI.hpp
include/engine/resource/: ResourceManager.hpp
include/engine/serialization/: BinaryFileStream.hpp  JsonExtensions.hpp
src/: MyGUI.cpp  main.cpp
tools/: UIdesigner.cpp
